Initial C++23 support The required features of the fmt library have been incorporated into the C++20 and C++23 standards via the <format> and <print> headers. Currently, those headers have been implemented in MSVC's standard library, but not yet GCC or Clang.
The source code has been changed so that the program can format/print using either the fmt library OR the C++ standard library. The fmt dependency will eventually be dropped in favor of the standard library when the headers become more widely available.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,23 @@ set(CMAKE_CXX_STANDARD 20)
 set(EXECUTABLE_TITLE "rsgain")
 include_directories(${PROJECT_BINARY_DIR})
 add_compile_definitions("$<$<CONFIG:DEBUG>:DEBUG>")
+if (WIN32)
+  set (USE_STD_FORMAT true)
+  if (MSVC_VERSION AND MSVC_VERSION VERSION_LESS 1937)
+    message(FATAL_ERROR "Visual Studio 17.7 and later supported only")
+  endif ()
+endif ()
+if (USE_STD_FORMAT)
+  if (UNIX)
+    include(CheckIncludeFiles)
+    CHECK_INCLUDE_FILES("format;print" SUPPORT_STD_FORMAT LANGUAGE CXX)
+    if (NOT SUPPORT_STD_FORMAT)
+      message(FATAL_ERROR "You do not have the required system headers for std::format and/or std::print")
+    endif ()
+  endif ()
+  add_compile_definitions(USE_STD_FORMAT)
+  set(CMAKE_CXX_STANDARD 23)
+endif ()
 
 # GCC 9 and earlier are not supported due to C++20 features
 if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 10)
@@ -75,8 +92,6 @@ if (WIN32)
   find_library(TAGLIB tag REQUIRED)
   find_path(LIBEBUR128_INCLUDE_DIR "ebur128.h" REQUIRED)
   find_library(LIBEBUR128 ebur128 REQUIRED)
-  find_path(FMT_INCLUDE_DIR "fmt/core.h" REQUIRED)
-  find_library(FMT fmt REQUIRED)
   find_path(GETOPT_INCLUDE_DIR "getopt.h" REQUIRED)
   find_library(GETOPT getopt REQUIRED)
   find_path(INIH_INCLUDE_DIR "ini.h" REQUIRED)
@@ -99,7 +114,9 @@ elseif (UNIX)
   pkg_check_modules(TAGLIB REQUIRED IMPORTED_TARGET taglib>=1.11.1)
   pkg_check_modules(LIBEBUR128 REQUIRED IMPORTED_TARGET libebur128>=1.2.4)
   pkg_check_modules(INIH REQUIRED IMPORTED_TARGET inih)
-  pkg_check_modules(FMT REQUIRED IMPORTED_TARGET fmt)
+  if (NOT USE_STD_FORMAT)
+    pkg_check_modules(FMT REQUIRED IMPORTED_TARGET fmt)
+  endif ()
 endif()
 
 # Generate Windows application manifest and resource file
