--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,6 @@ on:
 
   workflow_dispatch:
 
-defaults:
-  run:
-    shell: bash
-
 permissions:
   actions: none
   checks: none
@@ -28,6 +24,9 @@ permissions:
   repository-projects: none
   security-events: none
   statuses: read
+defaults:
+  run:
+    shell: bash
 
 env:
   VCPKG_COMMITTISH: 962e5e39f8a25f42522f51fffc574e05a3efd26b
@@ -45,10 +44,42 @@ jobs:
       VCPKG_TRIPLET: custom-triplet
 
     steps:
+      - name: Remove Old VS version (Hack)
+        shell: pwsh
+        run: |
+          Set-Location "C:\Program Files (x86)\Microsoft Visual Studio\Installer\"
+          $InstallPath = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise"
+          $componentsToRemove= @(
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.ARM"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.ARM.Spectre"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.ARM64"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.ARM64.Spectre"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.x86.x64"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.x86.x64.Spectre"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.ATL"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.ATL.Spectre"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.ATL.ARM"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.ATL.ARM.Spectre"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.ATL.ARM64"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.ATL.ARM64.Spectre"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.MFC"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.MFC.Spectre"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.MFC.ARM"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.MFC.ARM.Spectre"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.MFC.ARM64"
+            "Microsoft.VisualStudio.Component.VC.14.35.17.5.MFC.ARM64.Spectre"
+          )
+          [string]$workloadArgs = $componentsToRemove | ForEach-Object {" --remove " +  $_}
+          $Arguments = ('/c', "vs_installer.exe", 'modify', '--installPath', "`"$InstallPath`"",$workloadArgs, '--quiet', '--norestart', '--nocache')
+          # should be run twice
+          $process = Start-Process -FilePath cmd.exe -ArgumentList $Arguments -Wait -PassThru -WindowStyle Hidden
+          $process = Start-Process -FilePath cmd.exe -ArgumentList $Arguments -Wait -PassThru -WindowStyle Hidden
+
       - name: Checkout Git repository
         uses: actions/checkout@v3
         with:
           submodules: true
+          fetch-depth: 0
 
       - name: Setup vcpkg
         uses: friendlyanon/setup-vcpkg@v1
@@ -64,7 +95,7 @@ jobs:
 
       - name: Configure
         run: cmake -S . -B build 
-               -G "${{env.CMAKE_GENERATOR}}" 
+               -G "${{env.CMAKE_GENERATOR}}"
                -DCMAKE_TOOLCHAIN_FILE="$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake"
                -DVCPKG_OVERLAY_PORTS=build/overlays/ports
                -DVCPKG_OVERLAY_TRIPLETS=config/vcpkg_triplets
@@ -120,6 +151,8 @@ jobs:
     steps:
       - name: Checkout Git repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: "Install dependencies"
         run: |
@@ -141,6 +174,7 @@ jobs:
         run: cmake -S . -B build 
                -DCMAKE_TOOLCHAIN_FILE="$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake"
                -DVCPKG_TARGET_TRIPLET=${{env.VCPKG_TRIPLET}}
+               -DVCPKG_MANIFEST_FEATURES="external-fmt;"
                -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}}
                -DCMAKE_INSTALL_PREFIX=/usr
                -DPACKAGE=${{matrix.config.package_type}}
@@ -179,6 +213,8 @@ jobs:
     steps:
       - name: Checkout Git repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: "Install dependencies"
         run: |
