--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,9 @@ elseif (UNIX)
   pkg_check_modules(TAGLIB REQUIRED IMPORTED_TARGET taglib>=1.11.1)
   pkg_check_modules(LIBEBUR128 REQUIRED IMPORTED_TARGET libebur128>=1.2.4)
   pkg_check_modules(INIH REQUIRED IMPORTED_TARGET inih)
+  if (STRIP_BINARY)
+    find_program(STRIP strip REQUIRED)
+  endif ()
   if (NOT USE_STD_FORMAT)
     pkg_check_modules(FMT REQUIRED IMPORTED_TARGET fmt)
   endif ()
@@ -180,6 +183,15 @@ elseif (UNIX)
     install(FILES "${PROJECT_SOURCE_DIR}/docs/${EXECUTABLE_TITLE}.1" DESTINATION "${CMAKE_INSTALL_PREFIX}/share/man/man1")
   endif ()
   install(DIRECTORY "${PROJECT_SOURCE_DIR}/config/presets" DESTINATION "${CMAKE_INSTALL_PREFIX}/share/${EXECUTABLE_TITLE}")
+  if (PACKAGE STREQUAL "TXZ" OR PACKAGE STREQUAL "ZIP")
+    set(BINARY_PREFIX ".")
+    set(PRESETS_PREFIX ".")
+  else ()
+    set(BINARY_PREFIX "${CMAKE_INSTALL_PREFIX}/bin")
+    set(PRESETS_PREFIX "${CMAKE_INSTALL_PREFIX}/share/${EXECUTABLE_TITLE}")
+  endif ()
+  install(TARGETS ${EXECUTABLE_TITLE} DESTINATION "${BINARY_PREFIX}")
+  install(DIRECTORY "${PROJECT_SOURCE_DIR}/config/presets" DESTINATION "${PRESETS_PREFIX}")
   set(PRESETS_DIR ${CMAKE_INSTALL_PREFIX}/share/${EXECUTABLE_TITLE}/presets)
 
   # Build Debian packages
@@ -205,6 +217,8 @@ elseif (UNIX)
     set(CPACK_RPM_PACKAGE_GROUP "Applications/Multimedia")
     set(CPACK_RPM_PACKAGE_AUTOREQPROV 0)
     set(CPACK_RPM_PACKAGE_REQUIRES "libavcodec-free >= 6, libavformat-free >= 6, libswresample-free >= 6, libavutil-free >= 6, libebur128, zlib, inih")
+  elseif (PACKAGE STREQUAL "TXZ")
+    set(CPACK_ARCHIVE_FILE_EXTENSION ".tar.xz")
   endif ()
   if (PACKAGE)
     set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${PROJECT_DESCRIPTION})
