--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -154,7 +154,6 @@ jobs:
 
     env:
       CMAKE_BUILD_TYPE: Release
-      VCPKG_COMMITISH: 51de327421f4bd99b828a97b4e4adde54db032a6
       VCPKG_TRIPLET: x64-linux
 
     steps:
@@ -166,10 +165,10 @@ jobs:
       - name: "Install dependencies"
         run: |
           if [[ "${{matrix.config.name}}" == "Debian" ]]; then
-            apt update && apt install -y curl zip unzip tar build-essential git cmake pkg-config libavcodec-dev libavformat-dev libavutil-dev libswresample-dev libebur128-dev libinih-dev binutils
+            apt update && apt install -y curl zip unzip gzip tar build-essential git cmake pkg-config libavcodec-dev libavformat-dev libavutil-dev libswresample-dev libebur128-dev libinih-dev binutils
           fi
           if [[ "${{matrix.config.name}}" == "Fedora" ]]; then
-            dnf install -y curl zip unzip tar git make pkg-config gcc-c++ fedora-packager rpmdevtools cmake libavcodec-free-devel libavformat-free-devel libswresample-free-devel libavutil-free-devel libebur128-devel inih-devel
+            dnf install -y curl zip unzip gzip tar git make pkg-config gcc-c++ fedora-packager rpmdevtools cmake libavcodec-free-devel libavformat-free-devel libswresample-free-devel libavutil-free-devel libebur128-devel inih-devel
           fi
           if [[ "${{matrix.config.name}}" == "Static" ]]; then
             apt update && apt install -y curl zip unzip tar build-essential git cmake pkg-config python3 nasm binutils
@@ -199,6 +198,7 @@ jobs:
                -DCMAKE_INSTALL_PREFIX=/usr
                -DPACKAGE=${{matrix.config.package_type}}
                -DSTRIP_BINARY=ON
+               -DINSTALL_MANPAGE=${{matrix.config.name == 'Static' && 'OFF' || 'ON'}}
 
       - name: Build
         run: | 
