--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ project(rsgain
 set(MAXPROGBARWIDTH "0" CACHE STRING "Maximum width of progress bar")
 option(UCHECKMARKS "Enable use of Unicode checkmarks" ON)
 option(EXTRA_WARNINGS "Enable extra compiler warnings" OFF)
+option(INSTALL_MANPAGE "Install man page" OFF)
 if (EXTRA_WARNINGS)
   if (MSVC)
     add_compile_options(/W4 /WX)
@@ -117,6 +118,9 @@ elseif (UNIX)
   if (STRIP_BINARY)
     find_program(STRIP strip REQUIRED)
   endif ()
+  if (INSTALL_MANPAGE)
+    find_program(GZIP gzip REQUIRED)
+  endif ()
   if (NOT USE_STD_FORMAT)
     pkg_check_modules(FMT REQUIRED IMPORTED_TARGET fmt)
   endif ()
@@ -179,8 +183,8 @@ if (WIN32)
 # Installation - Linux/Mac
 elseif (UNIX)
   install(TARGETS ${EXECUTABLE_TITLE} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
-  if (NOT PACKAGE STREQUAL "RPM")
-    install(FILES "${PROJECT_SOURCE_DIR}/docs/${EXECUTABLE_TITLE}.1" DESTINATION "${CMAKE_INSTALL_PREFIX}/share/man/man1")
+  if (INSTALL_MANPAGE)
+    install(FILES "${PROJECT_BINARY_DIR}/${EXECUTABLE_TITLE}.1.gz" DESTINATION "${CMAKE_INSTALL_PREFIX}/share/man/man1")
   endif ()
   install(DIRECTORY "${PROJECT_SOURCE_DIR}/config/presets" DESTINATION "${CMAKE_INSTALL_PREFIX}/share/${EXECUTABLE_TITLE}")
   if (PACKAGE STREQUAL "TXZ" OR PACKAGE STREQUAL "ZIP")
